Clean up styling for buying options page. Fix glossary hover coloring. Fix hidden cost page spacing.

--- a/src/app.scss
+++ b/src/app.scss
@@ -11,7 +11,6 @@ body {
     height: 48px;
     margin: 8px 0 8px;
     padding: 0 24px 6px;
-    width: 100%;
 
     .navLogo {
         color: #43A047;
@@ -21,7 +20,7 @@ body {
         margin-right: 16px;
 
         &:hover {
-            color: #33691E;
+            color: #388e3c;
         }
     }
     .navigationButton {
