--- a/src/pages/GettingStarted/GettingStarted.scss
+++ b/src/pages/GettingStarted/GettingStarted.scss
@@ -2,7 +2,6 @@
     display: flex;
     gap: 32px;
     padding: 32px;
-    min-height: 100vh;
     overflow-y: auto;
     background-color: #ffffff;
 
